Automated jpackage + jlink to create portable applications or MSI installers.